--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "resend": "^6.1.0",
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.11"
+    "zod": "^4.1.11",
+    "@vercel/analytics": "^1.1.1",
+    "@sentry/nextjs": "^7.99.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
