--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
-    "react": "^19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-hook-form": "^7.63.0",
     "recharts": "^3.2.1",
     "resend": "^6.1.0",
