--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.22",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.1",
