--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "next-intl": "^4.5.1",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-hook-form": "^7.63.0",
